--- a/src/BooksApi/BooksApi/appsettings.json
+++ b/src/BooksApi/BooksApi/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+	"BookstoreDatabaseSettings": {
+		"BooksCollectionName": "Books",
+		"ConnectionString": "mongodb://localhost:27017",
+		"DatabaseName": "BookstoreDb"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*"
 }
